--- a/src/index.css
+++ b/src/index.css
@@ -333,7 +333,8 @@ span {
     margin: 3rem 0;
   }
 }
-@media screen and (min-width: 700px) and (max-width: 800px) {
+
+@media screen and (min-width: 700px) and (max-width: 850px) {
   #img1 {
     width: 1px;
     height: 1px;
@@ -344,6 +345,7 @@ span {
     width: 1px;
     height: 1px;
     display: none;
+    padding-left: 10px;
   }
 
   #img4 {
@@ -356,6 +358,8 @@ span {
     width: 1px;
     height: 1px;
     display: none;
+    padding-left: 10px;
+    padding-top: 10px;
   }
 
   #img2 {
@@ -368,6 +372,7 @@ span {
     width: 1px;
     height: 1px;
     display: none;
+    padding-left: 10px;
   }
 
   #img3 {
@@ -380,6 +385,7 @@ span {
     width: 1px;
     height: 1px;
     display: none;
+    padding-left: 10px;
   }
 
   #img5 {
@@ -391,6 +397,11 @@ span {
     width: 1px;
     height: 1px;
     display: none;
+    padding-left: 10px;
+  }
+
+  .home-text {
+    margin-right: 150px;
   }
 
   .schedule {
@@ -400,7 +411,7 @@ span {
 
   .login {
     background-color: white;
-    color: black;
+    color: rgb(5, 5, 5);
   }
 
   .home-nav,
@@ -418,6 +429,7 @@ span {
   }
   .Body {
     width: 100%;
-    padding-left: 5px;
+    display: flex;
+    flex-direction: column;
   }
 }
